# uuav_rotator

./: CMakeLists.txt  README.md  amu.launch  frame.STL
src/: SetJointVelocityPlugin.cpp  SetJointVelocityPlugin_backup.cpp
world/: empty.world  set_velocity.world  uuav.world  uuav_px4.world
